fix intro section mobile screen size to 500 orginal

--- a/css/styles.css
+++ b/css/styles.css
@@ -866,7 +866,7 @@ img {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   .intro {
     padding-top: 32px;
     padding-bottom: 197px;
