--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -86,7 +86,7 @@
   }
 }
 
-@include responsive(600) {
+@include responsive(500) {
   .intro {
     padding-top: 32px;
     padding-bottom: 197px;
